modifications du nom de la sidebar gestion

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -26,7 +26,7 @@
 						<li class="">
 							<a class="gestion" href="/gestion" id="gestion-link">
 								{% include 'icons/Scan.svg' %}
-								Gestion
+								Gest
 							</a>
 						</li>
 
