Modifier la sidebar

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -22,21 +22,18 @@
 								Stock
 							</a>
 						</li>
-
 						<li class="">
 							<a class="gestion" href="/gestion" id="gestion-link">
 								{% include 'icons/Scan.svg' %}
-								Gest
+								Gestion
 							</a>
 						</li>
-
 						<li class="">
 							<a class="eye" href="/scan/read" id="eye-link">
 								{% include 'icons/eye.svg' %}
 								Voir
 							</a>
 						</li>
-
 					</ul>
 					<ul class="logout-link">
 						<li>
@@ -46,14 +43,12 @@
 						</li>
 					</ul>
 				{% endif %}
-
 			</nav>
 		</aside>
 	</section>
-
 	<script>
 
-let stockLink = document.getElementById("stock-link");
+		let stockLink = document.getElementById("stock-link");
 let gestionLink = document.getElementById("gestion-link");
 let eyeLink = document.getElementById("eye-link");
 
